--- a/package.json
+++ b/package.json
@@ -5,7 +5,7 @@
   "main": "/src/index.js",
   "scripts": {
     "start": "webpack-dev-server .",
-    "build": "webpack -w"
+    "build": "webpack"
   },
   "keywords": [],
   "author": "",
@@ -29,6 +29,7 @@
     "babel-loader": "^8.2.5",
     "css-loader": "^6.7.1",
     "file-loader": "^6.2.0",
+    "html-webpack-plugin": "^5.5.0",
     "redux-logger": "^3.0.6",
     "style-loader": "^3.3.1",
     "webpack": "^5.74.0",
